# toad

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  NEWS  README  README.mblem  README.mbma  README.md  bootstrap.sh  configure.ac  froggen.cfg  known.lemmas  known.morphs  makemblem.sh  makembma.sh
FROGDATA/: CGN-POSTAGS
bootner/: README  corpus.data  corpus.running  emoties.lst  misdaad.lst  ner.data
docs/: Makefile.am  froggen.1  nergen.1
src/: Makefile.am  checkmblem.cxx  checkmbma.cxx  chunkgen.cxx  enr_chunkgen.cxx  enr_nergen.cxx  froggen.cxx  makemblem.cxx  makembma.cxx  morgen.cxx  nergen.cxx  nerv.cxx  testmbma.cxx
